Misc code changes Removed clearGames() from onDisable method as it's already called in PlayerListener class (onPluginDisable method)